{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 39,
  "lineage": "93be05f1-2a2e-fecf-f86e-7e3a2ae2917b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "myvpc_main_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0526d0d7743f2dd93",
            "id": "rtb-0526d0d7743f2dd93",
            "owner_id": "501764301129",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myvpc_main_route_table"
            },
            "vpc_id": "vpc-0815353b5580f59ec"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_web_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e98f78",
            "arn": "arn:aws:ec2:us-east-1:501764301129:instance/i-0f17d814399c0dd98",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f17d814399c0dd98",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-keys2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cdf6dcc16de72dc9",
            "private_dns": "ip-10-0-1-8.ec2.internal",
            "private_ip": "10.0.1.8",
            "public_dns": "ec2-34-205-39-245.compute-1.amazonaws.com",
            "public_ip": "34.205.39.245",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-073ac4c6758a851a0",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ead42d2ae68e1ff1",
            "tags": {
              "Name": "my_web_instance"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "my_web_instance_volume"
            },
            "vpc_security_group_ids": [
              "sg-0f17c9440945aea6c"
            ]
          },
          "dependencies": [
            "aws_security_group.web_security_group",
            "aws_subnet.myvpc_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myvpc_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-00ecb962481835448",
            "owner_id": "501764301129",
            "tags": {
              "Name": "myvpc_internet_gateway"
            },
            "vpc_id": "vpc-0815353b5580f59ec"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myvpc_private_subnet_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00ebbd753e681f256",
            "owner_id": "501764301129",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myvpc_private_subnet_route_table"
            },
            "vpc_id": "vpc-0815353b5580f59ec"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myvpc_public_subnet_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09b3cc995861d497c",
            "owner_id": "501764301129",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00ecb962481835448",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myvpc_public_subnet_route_table"
            },
            "vpc_id": "vpc-0815353b5580f59ec"
          },
          "dependencies": [
            "aws_internet_gateway.myvpc_internet_gateway",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myvpc_private_subnet_one_route_table_assosiation",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d540da1cc3bf833d",
            "route_table_id": "rtb-00ebbd753e681f256",
            "subnet_id": "subnet-08627d28b3755100b"
          },
          "dependencies": [
            "aws_route_table.myvpc_private_subnet_route_table",
            "aws_subnet.myvpc_private_subnet_one",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myvpc_private_subnet_two_route_table_assosiation",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef1931991d808572",
            "route_table_id": "rtb-00ebbd753e681f256",
            "subnet_id": "subnet-0d1c9880ead2fbddd"
          },
          "dependencies": [
            "aws_route_table.myvpc_private_subnet_route_table",
            "aws_subnet.myvpc_private_subnet_two",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myvpc_public_subnet_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f80cd4d667d6f0bd",
            "route_table_id": "rtb-09b3cc995861d497c",
            "subnet_id": "subnet-0ead42d2ae68e1ff1"
          },
          "dependencies": [
            "aws_internet_gateway.myvpc_internet_gateway",
            "aws_route_table.myvpc_public_subnet_route_table",
            "aws_subnet.myvpc_public_subnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501764301129:security-group/sg-0e7488cbd0c398228",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0e7488cbd0c398228",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db_security_group",
            "name_prefix": null,
            "owner_id": "501764301129",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myvpc_db_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0815353b5580f59ec"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501764301129:security-group/sg-0f17c9440945aea6c",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0f17c9440945aea6c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_security_group",
            "name_prefix": null,
            "owner_id": "501764301129",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myvpc_web_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0815353b5580f59ec"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-816301919",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e7488cbd0c398228",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.db_security_group",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-1268133074",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e7488cbd0c398228",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.db_security_group",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2045167862",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e7488cbd0c398228",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.db_security_group",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-3935569536",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e7488cbd0c398228",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.db_security_group",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2964709509",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f17c9440945aea6c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.web_security_group",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1556441274",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f17c9440945aea6c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.web_security_group",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2753914016",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f17c9440945aea6c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.web_security_group",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-2855392953",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f17c9440945aea6c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.web_security_group",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-526442779",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f17c9440945aea6c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.web_security_group",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2850733230",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f17c9440945aea6c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.web_security_group",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1416668632",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f17c9440945aea6c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.web_security_group",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-806689194",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f17c9440945aea6c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.web_security_group",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myvpc_private_subnet_one",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501764301129:subnet/subnet-08627d28b3755100b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-08627d28b3755100b",
            "map_public_ip_on_launch": false,
            "owner_id": "501764301129",
            "tags": {
              "Name": "myvpc_private_subnet_one"
            },
            "vpc_id": "vpc-0815353b5580f59ec"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myvpc_private_subnet_two",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501764301129:subnet/subnet-0d1c9880ead2fbddd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0d1c9880ead2fbddd",
            "map_public_ip_on_launch": false,
            "owner_id": "501764301129",
            "tags": {
              "Name": "myvpc_private_subnet_two"
            },
            "vpc_id": "vpc-0815353b5580f59ec"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myvpc_public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501764301129:subnet/subnet-0ead42d2ae68e1ff1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ead42d2ae68e1ff1",
            "map_public_ip_on_launch": true,
            "owner_id": "501764301129",
            "tags": {
              "Name": "myvpc_public_subnet"
            },
            "vpc_id": "vpc-0815353b5580f59ec"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501764301129:vpc/vpc-0815353b5580f59ec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fe29c6f730c17cb1",
            "default_route_table_id": "rtb-0526d0d7743f2dd93",
            "default_security_group_id": "sg-0c2dcdb5002b96739",
            "dhcp_options_id": "dopt-5bd46a21",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0815353b5580f59ec",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0526d0d7743f2dd93",
            "owner_id": "501764301129",
            "tags": {
              "Name": "myvpc"
            }
          }
        }
      ]
    }
  ]
}